--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass",
-              "./node_modules/materialize-css/dist/css/materialize.css"
+              "src/styles.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
@@ -89,7 +88,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.sass"
+              "src/styles.scss"
             ],
             "scripts": [],
             "assets": [
